crates/cyrus-core/tests/mcallister_e2e/snapshots/mcallister_e2e__stage4_flat_direction__ours_ek0.snap
---
source: crates/cyrus-core/tests/mcallister_e2e/stage4_flat_direction.rs
expression: snapshot
---
{
  "kappa_ppp": -65.37525332,
  "kappa_ppp_is_positive": false,
  "ek0": null,
  "basis_used": [
    5,
    8,
    6,
    7
  ],
  "note": "Computed with OUR basis. May be invalid with McAllister's flux vectors. See theirs branch for McAllister reproduction."
}
