crates/cyrus-core/tests/mcallister_e2e/snapshots/mcallister_e2e__stage4_flat_direction__ours_flat_direction_p.snap
---
source: crates/cyrus-core/tests/mcallister_e2e/stage4_flat_direction.rs
expression: p_f64
---
[
  1.1,
  -2.0492957746,
  -4.8394366197,
  -4.3028169014
]
