crates/cyrus-core/tests/mcallister_e2e/snapshots/mcallister_e2e__stage4_flat_direction__ours_n_matrix.snap
---
source: crates/cyrus-core/tests/mcallister_e2e/stage4_flat_direction.rs
expression: n_matrix_f64
---
[
  [
    -10.0,
    -27.0,
    0.0,
    11.0
  ],
  [
    -27.0,
    100.0,
    -27.0,
    -23.0
  ],
  [
    0.0,
    -27.0,
    0.0,
    11.0
  ],
  [
    11.0,
    -23.0,
    11.0,
    0.0
  ]
]
