crates/cyrus-core/tests/mcallister_e2e/snapshots/mcallister_e2e__stage4_flat_direction__theirs_flat_direction_p.snap
---
source: crates/cyrus-core/tests/mcallister_e2e/stage4_flat_direction.rs
expression: p_f64
---
[
  2.6636363636,
  1.4818181818,
  1.4818181818,
  0.5909090909
]
