crates/cyrus-core/tests/mcallister_e2e/snapshots/mcallister_e2e__stage4_flat_direction__theirs_n_matrix.snap
---
source: crates/cyrus-core/tests/mcallister_e2e/stage4_flat_direction.rs
expression: n_matrix_f64
---
[
  [
    10.0,
    0.0,
    -5.0,
    21.0
  ],
  [
    0.0,
    0.0,
    -5.0,
    21.0
  ],
  [
    -5.0,
    -5.0,
    0.0,
    -1.0
  ],
  [
    21.0,
    21.0,
    -1.0,
    -40.0
  ]
]
