crates/cyrus-core/tests/mcallister_e2e/snapshots/mcallister_e2e__stage4_flat_direction__theirs_stage4_full_output.snap
---
source: crates/cyrus-core/tests/mcallister_e2e/stage4_flat_direction.rs
expression: output
---
{
  "h21": 4,
  "basis_used": [
    3,
    4,
    5,
    8
  ],
  "k_flux": [
    -3,
    -5,
    8,
    6
  ],
  "m_flux": [
    10,
    11,
    -11,
    -5
  ],
  "n_matrix": [
    [
      10.0,
      -10.0,
      -10.0,
      0.0
    ],
    [
      -10.0,
      10.0,
      5.0,
      -1.0
    ],
    [
      -10.0,
      5.0,
      10.0,
      21.0
    ],
    [
      0.0,
      -1.0,
      21.0,
      -40.0
    ]
  ],
  "p": [
    2.6636363636,
    1.4818181818,
    1.4818181818,
    0.5909090909
  ],
  "ek0": 0.2343929955
}
